Ticket 853: Add support for 128 different quantities in hexquant namer